--- a/style.css
+++ b/style.css
@@ -44,8 +44,9 @@ section .title {
     position: relative;
     text-align: center;
     font-size: 40px;
-    font-weight: 500;
+    font-weight: 600;
     margin-bottom: 60px;
+    color: #111;
     padding-bottom: 20px;
     font-family: 'Ubuntu', sans-serif;
 
@@ -58,7 +59,8 @@ section .title::before {
     left: 50%;
     width: 180px;
     height: 3px;
-    background: #111;
+    background: #fff;
+  
     transform: translateX(-50%);
 }
 
@@ -275,8 +277,6 @@ section .title::after {
 
 
 
-
-
 /* ABOUT ME */
 .about .title::after {
     content: "| Education & Skills |";
@@ -335,10 +335,6 @@ section .title::after {
 .text strong.blue-text {
     color: rgb(8, 101, 189);
 }
-
-
-
-
 
 
 
@@ -436,22 +432,9 @@ section .title::after {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
 /* WORKS */
 .works {
     color: #fff;
-    background: url(images/bg.jpg) no-repeat center;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -459,7 +442,7 @@ section .title::after {
 }
 
 .works .title::before {
-    background: #fff;
+    background: #111;
 }
 
 
@@ -565,6 +548,7 @@ section .title::after {
 
 
 /* CONTACT */
+
 .contact .title::after {
     content: "| Get in touch |";
 }
